--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     </nav>
   </header>
   <main>
-    <article style="max-width: 600px">
+    <article style="max-width: 800px">
       <h1>Matteo Merola</h1>
+      <p>I'm currently building <a href="https://saaskoala.com">SaaS products</a> that help people and businesses succeed.</p>
       <p>
-        I'm currently a <a href="https://linkedin.com/in/matteomerola">tech lead</a> at <a href="https://www.klm.com">KLM</a>, working on turning <a href="https://airlineoperations.ai">airline operations</a> into a competitive advantage (<a href="https://youtu.be/Tkn0Q-lKTP0" target="_blank">watch &nearr;</a>).
+        Previously, I was an <a href="https://linkedin.com/in/matteomerola">Engineering Lead</a> at <a href="https://shell.com">Shell</a>, where I was leading +40 engineers building the operating system for the trade and supply business.
+
+        Before that, I was a <a href="https://linkedin.com/in/matteomerola">tech lead</a> at <a href="https://www.klm.com">KLM</a>, working on turning <a href="https://airlineoperations.ai">airline operations</a> into a competitive advantage (<a href="https://youtu.be/Tkn0Q-lKTP0" target="_blank">watch &nearr;</a>).
       </p>
       <p>
-        Previously, I started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an <a href="https://corsi.it" alt="">edutech startup</a>, wrote <a href="https://github.com/mattmezza">open source software</a> and collaborated with many companies in areas such as <a href="https://bunq.com">fintech</a> and <a href="https://cleopa.de">greentech</a>.
+        I've also started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an <a href="https://corsi.it" alt="">edutech startup</a>, wrote <a href="https://github.com/mattmezza">open source software</a> and collaborated with many companies in areas such as <a href="https://bunq.com">fintech</a> and <a href="https://cleopa.de">greentech</a>.
       </p>
     </article>
   </main>
