feat: added reference to ZenLeadr

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <main>
     <article style="max-width: 800px">
       <h1>Matteo Merola</h1>
-      <p>I'm currently building <a href="https://saaskoala.com">SaaS products</a> that help people and businesses succeed.</p>
+      <p>I'm currently building <a href="https://saaskoala.com">SaaS products</a> such as <a href="https://zenleadr.com/?utm_source=matteo.merola.co">ZenLeadr</a> that help people and businesses succeed.</p>
+      <p><a href="https://zenleadr.com/?utm_source=matteo.merola.co">ZenLeadr</a> is a toolkit designed for engineering managers and leaders.</p>
       <p>
         Previously, I was an <a href="https://linkedin.com/in/matteomerola">Engineering Lead</a> at <a href="https://shell.com">Shell</a>, where I was leading +40 engineers building the operating system for the trade and supply business.
 
