feat: added plausible analytics

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
       </p>
     </article>
   </main>
+  <script defer data-domain="matteo.merola.co" src="https://plausible.io/js/plausible.js"></script>
 </body>
 </html>
