--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
       </p>
     </article>
   </main>
-  <script defer data-domain="matteo.merola.co" src="https://plausible.io/js/plausible.js"></script>
+  <script async defer data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31" src="https://analytics.saaskoala.com/umami.js"></script>
 </body>
 </html>
