--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Articles by Matteo Merola">
   <meta property="og:title" content="Articles">
   <meta property="og:description" content="Articles by Matteo Merola">
-  <meta property="og:image" content="https://matteo.merola.co/assets/default-image.jpg">
+  <meta property="og:image" content="https://matteo.merola.co/assets/default-image.png">
 
   <!-- <script async defer data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31" src="https://analytics.saaskoala.com/umami.js"></script> -->
 </head>
