fixed from mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body class="antialiased flex flex-col min-h-screen dark:bg-dark-base-100 dark:text-white gap-4">
   <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full mt-4">
-    <nav class="flex justify-between items-center">
+    <nav class="flex flex-col md:flex-row justify-center md:justify-between items-center gap-4">
       <div class="flex justify-start items-center gap-4">
         <a class="btn btn-ghost btn-md" href="/"><span>🏠</span>Home</a>
         <a class="btn btn-ghost btn-md" href="/articles"><span>💭</span>Articles</a>
@@ -37,7 +37,7 @@
       </div>
     </nav>
   </header>
-  <main class="flex flex-grow justify-center items-center">
+  <main class="flex flex-grow justify-center items-center pt-16">
     <div class="px-4 w-full prose-responsive prose-zinc prose-h1:mb-0 prose-h3:mt-0 prose-h3:mb-8 prose-h3:font-normal">
       <h1>Matteo Merola<span class="text-xs sm:text-sm md:text-base text-gray-700 ml-2 font-light italic">(he/him)</span></h1>
       <h3>Engineering Manager</h3>
