--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <meta property="og:title" content="Articles">
   <meta property="og:description" content="Articles by Matteo Merola">
   <meta property="og:image" content="https://matteo.merola.co/assets/default-image.png">
-
-  <!-- <script async defer data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31" src="https://analytics.saaskoala.com/umami.js"></script> -->
+  <link rel="prerender" href="/articles" />
+  <link rel="prefetch" href="/articles" as="document" />
+  <script async defer data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31" src="https://analytics.saaskoala.com/umami.js"></script>
 </head>
 <body class="antialiased flex flex-col min-h-screen dark:bg-dark-base-100 dark:text-white gap-4">
-  <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full mt-4">
+  <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full my-4">
     <nav class="flex flex-col md:flex-row justify-center md:justify-between items-center gap-4">
       <div class="flex justify-start items-center gap-4">
         <a class="btn btn-ghost btn-md" href="/"><span>🏠</span>Home</a>
