--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
       </div>
     </nav>
   </header>
-  <main class="flex flex-grow justify-center items-center pt-16">
+  <main class="flex flex-grow justify-center items-center pt-8">
     <div class="px-4 w-full prose-responsive prose-zinc prose-h1:mb-0 prose-h3:mt-0 prose-h3:mb-8 prose-h3:font-normal">
       <h1>Matteo Merola<span class="text-xs sm:text-sm md:text-base text-gray-700 ml-2 font-light italic">(he/him)</span></h1>
       <h3>Engineering Manager</h3>
-      <p>I create software <a href="https://saaskoala.com">that helps people and businesses succeed</a>.</p>
-      <p>I run <a href="https://zenleadr.com/?utm_source=matteo.merola.co">ZenLeadr</a>, the toolkit designed for engineering managers and leaders.</p>
+      <p>I lead engineering teams at <a href="https://ikea.com">IKEA</a>'s main franchisee, <a href="https://ingka.com">Ingka</a>.</p>
+      <p>I run <a href="https://saaskoala.com">SaaS Koala</a>, a company creating <a href="https://saaskoala.com/more.html">products that help people and businesses succeed</a>.
+      Products like <a href="https://zenleadr.com/?utm_source=matteo.merola.co">ZenLeadr</a>, the toolkit designed for engineering managers and leaders.</p>
       <p>
         Previously, I was an <a href="https://linkedin.com/in/matteomerola">Engineering Manager</a> at <a href="https://shell.com">Shell</a>, where I was leading 40+ engineers building the operating system for the trade and supply business.
 
         I was also a <a href="https://linkedin.com/in/matteomerola">tech lead</a> at <a href="https://www.klm.com">KLM</a>, working on turning <a href="https://airlineoperations.ai">airline operations</a> into a competitive advantage (<a href="https://youtu.be/Tkn0Q-lKTP0" target="_blank">watch &nearr;</a>).
       </p>
       <p>
-        In my 7+ years of experience I've started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an edutech startup (<a href="https://corsi.it" alt="">corsi.it</a>), collaborated with many companies in areas such as fintech (<a href="https://bunq.com">bunq</a>) and greentech (<a href="https://cleopa.de">cleopa</a>).
+        In my 9+ years of experience I've started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an edutech startup (<a href="https://corsi.it" alt="">corsi.it</a>), collaborated with many companies in areas such as fintech (<a href="https://bunq.com">bunq</a>) and greentech (<a href="https://cleopa.de">cleopa</a>).
       </p>
       <p>
         I write Open Source software at <a href="https://github.com/mattmezza">github.com/mattmezza</a> and I <a href="articles">blog</a> every once in a while.
