--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:image" content="https://matteo.merola.co/assets/default-image.png">
   <link rel="prerender" href="/articles" />
   <link rel="prefetch" href="/articles" as="document" />
-  <script async defer data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31" src="https://analytics.saaskoala.com/umami.js"></script>
+  <script defer src="https://analytics.casa.merola.co/script.js" data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31"></script>
 </head>
 <body class="antialiased flex flex-col min-h-screen dark:bg-dark-base-100 dark:text-white gap-4">
   <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full my-4">
