added software & service

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <div class="flex justify-start items-center gap-4">
         <a class="btn btn-ghost btn-md" href="/"><span>🏠</span>Home</a>
         <a class="btn btn-ghost btn-md" href="/articles"><span>💭</span>Articles</a>
+        <a class="btn btn-ghost btn-md" href="/software"><span>💻</span>Software</a>
+        <a class="btn btn-ghost btn-md" href="/services"><span>🤝</span>Services</a>
       </div>
       <div class="flex justify-start items-center gap-4 mr-2">
         <a class="btn" href="https://github.com/mattmezza"><i class="fab fa-github"></i></a>
