minor improvements to UI

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </head>
 <body class="antialiased flex flex-col min-h-screen dark:bg-dark-base-100 dark:text-white gap-4">
   <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full my-4">
-    <nav class="flex flex-col md:flex-row justify-center md:justify-between items-center gap-4">
-      <div class="flex justify-start items-center gap-4">
-        <a class="btn btn-ghost btn-md" href="/"><span>🏠</span>Home</a>
-        <a class="btn btn-ghost btn-md" href="/articles"><span>💭</span>Articles</a>
-        <a class="btn btn-ghost btn-md" href="/software"><span>💻</span>Software</a>
-        <a class="btn btn-ghost btn-md" href="/services"><span>🤝</span>Services</a>
+    <nav class="flex flex-col lg:flex-row justify-center md:justify-between items-center gap-4">
+      <div class="flex justify-start items-center gap-2 md:gap-3 xl:gap-4">
+        <a class="btn btn-ghost btn-md !underline-offset-8" href="/"><span class="hidden md:block">🏠</span>Home</a>
+        <a class="btn btn-ghost btn-md !no-underline" href="/articles"><span class="hidden md:block">💭</span>Articles</a>
+        <a class="btn btn-ghost btn-md !no-underline" href="/software"><span class="hidden md:block">💻</span>Software</a>
+        <a class="btn btn-ghost btn-md !no-underline" href="/services"><span class="hidden md:block">🤝</span>Services</a>
       </div>
       <div class="flex justify-start items-center gap-4 mr-2">
         <a class="btn" href="https://github.com/mattmezza"><i class="fab fa-github"></i></a>
@@ -42,10 +42,10 @@
   </header>
   <main class="flex flex-grow justify-center items-center pt-8">
     <div class="px-4 w-full prose-responsive prose-zinc prose-h1:mb-0 prose-h3:mt-0 prose-h3:mb-8 prose-h3:font-normal">
-      <h1>Matteo Merola<span class="text-xs sm:text-sm md:text-base text-gray-700 ml-2 font-light italic">(he/him)</span></h1>
-      <h3>Engineering Manager</h3>
-      <p>I lead engineering teams at <a href="https://ikea.com">IKEA</a>'s main franchisee, <a href="https://ingka.com">Ingka</a>.</p>
-      <p>I run <a href="https://saaskoala.com">SaaS Koala</a>, a company creating <a href="https://saaskoala.com/more.html">products that help people and businesses succeed</a>.
+      <h1 class="!mb-2">Matteo Merola<span class="text-xs sm:text-sm md:text-base text-gray-700 ml-2 font-light italic">(he/him)</span></h1>
+      <h4 class="!mt-2 !mb-16">Software Engineering Leader & Senior Manager</h4>
+      <p>Currently, I lead engineering teams at <a href="https://ikea.com">IKEA</a>'s main franchisee, <a href="https://ingka.com">Ingka</a>.</p>
+      <p>I also run <a href="https://saaskoala.com">SaaS Koala</a>, a company creating <a href="https://saaskoala.com/more.html">products that help people and businesses succeed</a>.
       Products like <a href="https://zenleadr.com/?utm_source=matteo.merola.co">ZenLeadr</a>, the toolkit designed for engineering managers and leaders.</p>
       <p>
         Previously, I was an <a href="https://linkedin.com/in/matteomerola">Engineering Manager</a> at <a href="https://shell.com">Shell</a>, where I was leading 40+ engineers building the operating system for the trade and supply business.
@@ -53,7 +53,7 @@
         I was also a <a href="https://linkedin.com/in/matteomerola">tech lead</a> at <a href="https://www.klm.com">KLM</a>, working on turning <a href="https://airlineoperations.ai">airline operations</a> into a competitive advantage (<a href="https://youtu.be/Tkn0Q-lKTP0" target="_blank">watch &nearr;</a>).
       </p>
       <p>
-        In my 9+ years of experience I've started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an edutech startup (<a href="https://corsi.it" alt="">corsi.it</a>), collaborated with many companies in areas such as fintech (<a href="https://bunq.com">bunq</a>) and greentech (<a href="https://cleopa.de">cleopa</a>).
+        In my 10+ years of experience I've started a <a href="https://datasound.it" alt="datasound, a boutique consultancy company in the realm of big data analisys, recommender systems and artificial intelligence.">digital company</a>, led the development team in an edutech startup (<a href="https://corsi.it" alt="">corsi.it</a>), collaborated with many companies in areas such as fintech (<a href="https://bunq.com">bunq</a>) and greentech (<a href="https://cleopa.de">cleopa</a>).
       </p>
       <p>
         I write Open Source software at <a href="https://github.com/mattmezza">github.com/mattmezza</a> and I <a href="articles">blog</a> every once in a while.
