--- a/services.html
+++ b/services.html
@@ -20,25 +20,25 @@
   <script defer src="https://analytics.casa.merola.co/script.js" data-website-id="085a8ece-dea7-4ce1-b62a-3b6241b32b31"></script>
 </head>
 <body class="antialiased flex flex-col min-h-screen dark:bg-dark-base-100 dark:text-white gap-4">
-  <header class="prose-responsive prose-a:no-underline mx-auto w-full mt-4">
-    <nav class="flex flex-col md:flex-row justify-center md:justify-between items-center gap-4">
-      <div class="flex justify-start items-center gap-4">
-        <a class="btn btn-ghost btn-md" href="/"><span>🏠</span>Home</a>
-        <a class="btn btn-ghost btn-md" href="/articles"><span>💭</span>Articles</a>
-        <a class="btn btn-ghost btn-md" href="/software"><span>💻</span>Software</a>
-        <a class="btn btn-ghost btn-md" href="/services"><span>🤝</span>Services</a>
+  <header class="px-4 prose-responsive prose-a:no-underline mx-auto w-full my-4">
+    <nav class="flex flex-col lg:flex-row justify-center md:justify-between items-center gap-4">
+      <div class="flex justify-start items-center gap-2 md:gap-3 xl:gap-4">
+        <a class="btn btn-ghost btn-md !no-underline" href="/"><span class="hidden md:block">🏠</span>Home</a>
+        <a class="btn btn-ghost btn-md !no-underline" href="/articles"><span class="hidden md:block">💭</span>Articles</a>
+        <a class="btn btn-ghost btn-md !no-underline" href="/software"><span class="hidden md:block">💻</span>Software</a>
+        <a class="btn btn-ghost btn-md !underline-offset-8" href="/services"><span class="hidden md:block">🤝</span>Services</a>
       </div>
       <div class="flex justify-start items-center gap-4 mr-2">
         <a class="btn" href="https://github.com/mattmezza"><i class="fab fa-github"></i></a>
         <a class="btn" href="https://twitter.com/_mattmezza_"><i class="fab fa-twitter w-4"></i></a>
         <a class="btn" href="https://linkedin.com/in/matteomerola"><i class="fab fa-linkedin w-4"></i></a>
         <a class="btn" href="https://telegram.me/mattmezza"><i class="fab fa-telegram w-4"></i></a>
-        <a class="btn" href="mailto:matteo@merola.co"><i class="fas fa-envelope w-4"></i></a>
+        <a class="btn" href="mailto:mattmezza@gmail.com"><i class="fas fa-envelope w-4"></i></a>
       </div>
     </nav>
   </header>
   <main class="grow prose-responsive mx-auto w-full mt-16 md:mt-32 px-4">
-    <h1>Services 🤝</h1>
+    <h1 class="!mb-16">Services 🤝</h1>
     <p>
       Merola Software & Services provides consulting and advisory services for companies of all sizes—from
       small and medium businesses needing custom software solutions to enterprises seeking engineering leadership expertise.
