included flowrent link

--- a/software.html
+++ b/software.html
@@ -61,8 +61,8 @@
         Complete bike rental software solution made easy for busy people. FlowRent streamlines the entire rental
         process, from booking to returns, so you can focus on running your business.
       </p>
-      <p class="text-gray-500 italic">
-        Coming soon
+      <p>
+        <a href="https://flowrent.app" class="text-blue-500 hover:underline">Discover FlowRent &rarr;</a>
       </p>
     </section>
 
